# itmo-moodle-agent

./: .coverage  .gitignore  Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini
backend/src/: __init__.py  config.py  exception.py
backend/src/api/: __init__.py  dependencies.py  models.py
backend/src/api/routes/: auth.py  task.py
backend/src/database/: __init__.py  task.py  user.py
backend/src/integration/: __init__.py  client.py  models.py  plugins.py
backend/src/tasks/: __init__.py
backend/tests/: conftest.py  mockdata.py  test_auth_api.py  test_basic.py  test_common_api.py  test_group_crud.py  test_integration.py  test_task_api.py  test_task_crud.py  test_user_crud.py
