[project]
name = "itmo-moodle-agent"
version = "0.1.0"
description = "ITMO Mooddle Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.1",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
]
